switch to jdk 8